--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.6.8",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "react": "^18",
